--- a/dbc.yaml
+++ b/dbc.yaml
@@ -2,7 +2,8 @@ development:
   adapter: oracle
   database: xe
   pool: 5
+  pagesize: 15
   username: system
   password: saicool988
 query:
-    select  * from first
+  select * from first
