--- a/mssql.yaml
+++ b/mssql.yaml
@@ -3,3 +3,7 @@ parameters:
     username : LAPTOP-CMNLMDRF\SQLEXPRESS
     database : students
     drivers: SQL Server
+    address : http://127.0.0.1:8000/
+
+query:
+  select * from details
