--- a/sqlite_req.yaml
+++ b/sqlite_req.yaml
@@ -2,7 +2,6 @@
 development:
   db_type: sqlite
   database: medusa
-  # offset_increment: 5
 
 #Custom query
 query:
@@ -10,3 +9,6 @@ query:
 
 count_query:
   SELECT COUNT(*) AS count FROM students_sqlite
+
+authentication_query:
+  SELECT * FROM users_dataadapter
